--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,21 +2,33 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: auto
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: name
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
-            custom_authenticator: App\Security\CustomAuthenticator
+            provider: app_user_provider
+#            custom_authenticator: App\Security\CustomAuthenticator
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                username_parameter: name
+                password_parameter: password
+                enable_csrf: true
+                default_target_path: home_page
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
