--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,14 +2,18 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-        App\Entity\User:
+        App\Entity\AuthenticationUser:
             algorithm: auto
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         app_user_provider:
             entity:
-                class: App\Entity\User
-                property: name
+                class: App\Entity\AuthenticationUser
+                property: username
+        # used to reload user from session & other features (e.g. switch_user)
+    access_control:
+        - { path: /login }
+        - { path: /, roles: ROLE_USER }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -17,13 +21,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-#            custom_authenticator: App\Security\CustomAuthenticator
             form_login:
                 login_path: app_login
                 check_path: app_login
-                username_parameter: name
+                username_parameter: username
                 password_parameter: password
-                enable_csrf: true
                 default_target_path: home_page
             logout:
                 path: app_logout
@@ -38,7 +40,7 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
+#    access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
