--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,8 @@ security:
         # used to reload user from session & other features (e.g. switch_user)
     access_control:
         - { path: /login }
+        - { path: /signup }
+        - { path: /usersave/test }
         - { path: /, roles: ROLE_USER }
     firewalls:
         dev:
